# Dobble-referee

./: .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  process.py  pylintrc  pyproject.toml  requirements.txt  train.py
notebooks/: Pipeline.ipynb  ResultExport.ipynb  classifier_optimization.ipynb  color_histogram.ipynb  color_histogram_tp.ipynb  fourier_transform.ipynb  init_resources.ipynb  moments.ipynb  pipeline.ipynb  table_of_content.ipynb  tasks_assignment.ipynb  train_and_test_set.ipynb
src/: init_resources.py
