[tool.poetry]
name = "town_generator"
version = "0.1.0"
description = "Town generator."
authors = ["Adrien Anton Ludwig <adrien.anton-ludwig@epita.fr>", "Adele Pluquet <adele.pluquet@epita.fr>"]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
